# Dedekind

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  bump_version.py  dedekind_df_test.csv  dedekind_nb.html  dedekind_nb.md  dedekind_nb_src.ddk  dedekind_nb_src.md  dedekind_test_output.txt  dummy_test.cif  fourier_test_output.txt  notebook_export_demo.html  notebook_export_demo.md  package-lock.json  pyproject.toml  requirements.txt  run_assets_examples.py  run_examples.py  run_tests.py  temp_messung.csv
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
DedekindStudio/: .gitignore  BUILD_AND_RUN.md  DEDEKIND_STUDIO_FORK.md  bootstrap.py  build_exe.bat  build_exe.spec  launch_frozen.py  requirements-dedekind-studio.txt  start_dedekind_studio.bat
DedekindStudio/scripts/: create_dedekind_win_ico.py  test_kernel_manual.py
DedekindStudio/spyder/: __init__.py
Documentation/: Build_Dedekind_Studio_Exe.md  Chemistry_Biology_Roadmap.md  Commercialization_Options.md  Console_KaTeX_Roadmap.md  Dedekind - The Programming Language for Science.pptx  Dedekind_Language_Specification.md  Dedekind_Research_and_Architecture.md  Dedekind_Studio_Spyder_Fork.md  Features_Implementation_Roadmap.md  Fluid_Dynamics_Shape_Optimization.md  Fourier_Language_Specification.md  Fourier_Research_and_Architecture.md  Fourier_Studio_Spyder_Fork.md  IDE_Studio_Roadmap.md  Maturity_Assessment.md  README.md  Symbolic_Simplification_Roadmap.md  Thermal_LBM_Convection.md  Underserved_Sciences_Roadmap.md  Was_Dedekind_aktuell_kann.md  What_Dedekind_Can_Currently_Do.md
SpyderFork/: .gitignore  BUILD_AND_RUN.md  DEDEKIND_STUDIO_FORK.md  FOURIER_STUDIO_FORK.md  requirements-dedekind-studio.txt  start_dedekind_studio.bat
SpyderFork/scripts/: test_kernel_manual.py
SpyderFork/spyder/: __init__.py
dedekind_jupyter_kernel/: __init__.py  __main__.py  kernel.py
docs/: Chemistry_Biology_Roadmap.md  Console_KaTeX_Roadmap.md  Dedekind_Language_Specification.md  Dedekind_Research_and_Architecture.md  Features_Implementation_Roadmap.md  Symbolic_Simplification_Roadmap.md  Underserved_Sciences_Roadmap.md  What_Dedekind_Can_Currently_Do.md  changelog.md  language.md  roadmap.md
examples/: README.md  algo_showcase.fourier  cfd_sparse_sim.fourier  hello.mlir  hello_native.cpp  matrix_gpu.fourier  native_benchmark.fourier  relativity_physics.py  signal_physics.fourier
examples/cpp/: hello_native.cpp
examples/dedekind/: ac_filter_optimization.ddk  airfoil_optimization.ddk  bridge_topology_optimization.ddk  cfd_sparse_sim.ddk  chemical_equilibrium.ddk  chemistry_elements.ddk  hello.ddk  (+57 more)
fourier_jupyter_kernel/: README.md  __init__.py  __main__.py  kernel.py
modules/: atomic.ddk  biology.ddk  chemistry.ddk  control.ddk  crystallography.ddk  dsp.ddk  electronics.ddk  fluid_dynamics.ddk  geometry.ddk  math.ddk  mathlib.ddk  ml.ddk  molecular.ddk  physics.ddk  quantum.ddk  robotics.ddk  signals.ddk  space.ddk  stats.ddk  structural.ddk  thermal.ddk
src/: server.py
(+424 files in other folders)
