[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dedekind"
version = "3.0.2"
description = "Dedekind: a programming language for scientific computing with native units, autograd, and a LaTeX-from-AST workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mario Michael Heinrich", email = "heinrich.mario.m@gmail.com" },
    { name = "Dedekind Contributors" },
]
keywords = [
    "scientific-computing", "domain-specific-language", "autograd",
    "units", "tensors", "physics", "machine-learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core runtime: minimal viable Dedekind program (parser, codegen, autograd via torch).
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "sympy>=1.10",
]

[project.optional-dependencies]
# Jupyter kernel: `pip install dedekind[jupyter]`, then `python -m dedekind.install_kernel`.
jupyter = ["ipykernel>=6.0", "jupyter_client>=7.0"]
# Plotting helpers used by some demos.
plot    = ["matplotlib>=3.5"]
# Statistical/optimization built-ins (least_squares, sparse iterative solvers, special funcs).
sci     = ["scipy>=1.9"]
# Geo/climate workflows: labeled_tensor(), LabeledTensor[lat, lon, time].
geo     = ["xarray>=2024.0"]
# Bioinformatics: smiles_descriptors(), lipinski_rule_of_five().
bio     = ["rdkit>=2024.0"]
# Molecular dynamics bridge: md_simulate_lj().
md      = ["openmm>=8.0"]
# Graph neural net demos: gnn_molecule_demo, gnn_materials_demo.
ml      = ["torch_geometric>=2.7"]
# Everything except server (curated researcher default).
all     = [
    "ipykernel>=6.0", "jupyter_client>=7.0",
    "matplotlib>=3.5", "scipy>=1.9",
    "xarray>=2024.0", "rdkit>=2024.0", "openmm>=8.0", "torch_geometric>=2.7",
]

[project.scripts]
dedekind = "dedekind.cli:main"
dedekind-install-kernel = "dedekind.install_kernel:main"

[project.urls]
Homepage   = "https://github.com/engineer1080/Dedekind"
Issues     = "https://github.com/engineer1080/Dedekind/issues"
Examples   = "https://github.com/engineer1080/Dedekind/tree/main/examples"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dedekind*", "dedekind_jupyter_kernel*"]

[tool.setuptools.package-data]
dedekind = ["runtime_modules/*.py", "stdlib/*.ddk"]
dedekind_jupyter_kernel = ["kernelspec/*"]
